--- a/GleitZeitRechner/AndroidManifest.xml
+++ b/GleitZeitRechner/AndroidManifest.xml
@@ -22,16 +22,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.chknetsc.gleitzeitrechner.KalenderlistActivity"
-            android:label="@string/title_activity_kalenderlist"
-            android:parentActivityName="android.app.ListActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="android.app.ListActivity" />
-        </activity>
-        <activity
             android:name="com.chknetsc.gleitzeitrechner.RechnerActivity"
             android:label="@string/title_activity_rechner" >
+        </activity>
+        <activity
+            android:name="com.chknetsc.gleitzeitrechner.TimeLineActivity"
+            android:label="@string/title_activity_time_line" >
         </activity>
     </application>
 
