Prog läuft mit Datenbank anbindung die die Daten sichert

--- a/GleitZeitRechner/AndroidManifest.xml
+++ b/GleitZeitRechner/AndroidManifest.xml
@@ -18,6 +18,7 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -28,6 +29,10 @@
         <activity
             android:name="com.chknetsc.gleitzeitrechner.TimeLineActivity"
             android:label="@string/title_activity_time_line" >
+        </activity>
+        <activity
+            android:name="com.chknetsc.gleitzeitrechner.TimeLineActivityV2"
+            android:label="@string/title_activity_time_line_activity_v2" >
         </activity>
     </application>
 
